--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^6.3.4",
     "astro": "^5.9.2",
     "typescript": "^5.8.3"
   }
