--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/netlify": "^6.3.4",
-    "astro": "^5.9.2",
+    "@astrojs/netlify": "^6.4.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.11.0",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   }
 }
